--- a/app/src/main/res/layout/fragment_regional.xml
+++ b/app/src/main/res/layout/fragment_regional.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -30,8 +30,11 @@
                     android:textSize="20sp"
                     android:textAlignment="center"/>
             </LinearLayout>
-
+            <com.github.mikephil.charting.charts.HorizontalBarChart
+                android:id="@+id/chart"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="700dp"/>
         </LinearLayout>
-
     </ScrollView>
 </RelativeLayout>
